25 July 2005:  Menelaos Karavelas
- fixed numerical bug in computation of vertex map (removal procedure)

22 July 2005:  Menelaos Karavelas
- in Simple_container_wrapper: changed return type of find method from
  iterator to const_iterator

20 July 2005:  Menelaos Karavelas
- added copyright headers in demo files

18 July 2005:  Menelaos Karavelas
- prefixed macros with CGAL_

17 July 2005:  Menelaos Karavelas
- fixed bug in copy method: the bug was introduced by the change in the
  representation of the input sites container from an std::list to an
  std::set.

12 July 2005:  Menelaos Karavelas
- fixed wrong message for one of the buttons in the file toolbar (demo)
- the segment Voronoi diagram in the demo now inserts segments in the upper
  levels as well
- added find and remove methods in the simple container wrapper
- in demo:
  * all messages to std::cout are now sent to std::cerr
  * added support for site removal
  * removed unused code
  * input data are saved in files with .cin extension; the full description of
    the segment Voronoi diagram is saved in files with .svd extension and
    .hsvd extension (the latter is used for the hierarchy).
  * added data/ directory with sample input data
- Code:
  * moved some methods from .h to .C
  * the input sites container is now an std::set instead of an std::list; this
    was done because we want to efficiently insert/remove/search elements
  * added remove method: works only with sites that are input sites and not
    subsegments or points of intersection of inout sites; removal works in
    the hierarchy as well; the computation of the vertex map is still unstable
    and prone to numerical errors

26 June 2005:  Menelaos Karavelas
- doc: added Triangulation_data_structure, Vertex and Face types and tds()
  method; also added that the Segment_Voronoi_diagram_2 class is a model of
  the DelaunayGraph_2 concept.
- SVD class: Vertex and Face are typedefed from those of the TDS not the
  Triangulation_2 class
