@@ -1,3 +1,9 @@
+30 July 2005:  Menelaos Karavelas
+- fixed bug in computation of predicates when filtered exact was used:
+  some values in the arrays used where unitialized
+- fixed "control reaches end of non-void function" warnings in g++ 4.0.0 of
+  MacOS X Tiger
+
 25 July 2005:  Menelaos Karavelas
 - fixed numerical bug in computation of vertex map (removal procedure)
 
